fixed paddding problem on small devices

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,7 +25,7 @@
 
   @media (max-width : 600px){
     .main {
-      padding-top: 10px;
+      padding-top: 70px;
     }
   }
 }
